// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > produces correct output for error-404 template 1`] = `
".spotlight {
  background: linear-gradient(45deg, #00dc82, #36e4da 50%, #0047e1);
  bottom: -30vh;
  filter: blur(20vh);
  height: 40vh;
}
.gradient-border {
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
  border-radius: 0.5rem;
  position: relative;
}
@media (prefers-color-scheme: light) {
  .gradient-border {
    background-color: hsla(0, 0%, 100%, 0.3);
  }
  .gradient-border:before {
    background: linear-gradient(
      90deg,
      #e2e2e2,
      #e2e2e2 25%,
      #00dc82 50%,
      #36e4da 75%,
      #0047e1
    );
  }
}
@media (prefers-color-scheme: dark) {
  .gradient-border {
    background-color: hsla(0, 0%, 8%, 0.3);
  }
  .gradient-border:before {
    background: linear-gradient(
      90deg,
      #303030,
      #303030 25%,
      #00dc82 50%,
      #36e4da 75%,
      #0047e1
    );
  }
}
.gradient-border:before {
  background-size: 400% auto;
  border-radius: 0.5rem;
  bottom: 0;
  content: "";
  left: 0;
  -webkit-mask:
    linear-gradient(#fff 0 0) content-box,
    linear-gradient(#fff 0 0);
  mask:
    linear-gradient(#fff 0 0) content-box,
    linear-gradient(#fff 0 0);
  -webkit-mask-composite: xor;
  mask-composite: exclude;
  opacity: 0.5;
  padding: 2px;
  position: absolute;
  right: 0;
  top: 0;
  transition:
    background-position 0.3s ease-in-out,
    opacity 0.2s ease-in-out;
  width: 100%;
}
.gradient-border:hover:before {
  background-position: -50% 0;
  opacity: 1;
}
.fixed {
  position: fixed;
}
.left-0 {
  left: 0;
}
.right-0 {
  right: 0;
}
.z-10 {
  z-index: 10;
}
.z-20 {
  z-index: 20;
}
.grid {
  display: grid;
}
.mb-16 {
  margin-bottom: 4rem;
}
.mb-8 {
  margin-bottom: 2rem;
}
.max-w-520px {
  max-width: 520px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-full {
  width: 100%;
}
.flex {
  display: flex;
}
.cursor-pointer {
  cursor: pointer;
}
.place-content-center {
  place-content: center;
}
.items-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}
.overflow-hidden {
  overflow: hidden;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}
.px-8 {
  padding-left: 2rem;
  padding-right: 2rem;
}
.py-2 {
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}
.text-center {
  text-align: center;
}
.text-8xl {
  font-size: 6rem;
  line-height: 1;
}
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.text-black {
  --un-text-opacity: 1;
  color: rgb(0 0 0 / var(--un-text-opacity));
}
.font-light {
  font-weight: 300;
}
.font-medium {
  font-weight: 500;
}
.leading-tight {
  line-height: 1.25;
}
.font-sans {
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-black {
    --un-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--un-bg-opacity));
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (min-width: 640px) {
  .sm\\:px-0 {
    padding-left: 0;
    padding-right: 0;
  }
  .sm\\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  .sm\\:py-3 {
    padding-bottom: 0.75rem;
    padding-top: 0.75rem;
  }
  .sm\\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
  .sm\\:text-xl {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}
"
`;

exports[`template > produces correct output for error-404 template 2`] = `
"*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
h1 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  color: inherit;
  text-decoration: inherit;
}
h1,
p {
  margin: 0;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
"
`;

exports[`template > produces correct output for error-500 template 1`] = `
".spotlight {
  background: linear-gradient(45deg, #00dc82, #36e4da 50%, #0047e1);
  filter: blur(20vh);
}
.fixed {
  position: fixed;
}
.-bottom-1\\/2 {
  bottom: -50%;
}
.left-0 {
  left: 0;
}
.right-0 {
  right: 0;
}
.grid {
  display: grid;
}
.mb-16 {
  margin-bottom: 4rem;
}
.mb-8 {
  margin-bottom: 2rem;
}
.h-1\\/2 {
  height: 50%;
}
.max-w-520px {
  max-width: 520px;
}
.min-h-screen {
  min-height: 100vh;
}
.place-content-center {
  place-content: center;
}
.overflow-hidden {
  overflow: hidden;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.px-8 {
  padding-left: 2rem;
  padding-right: 2rem;
}
.text-center {
  text-align: center;
}
.text-8xl {
  font-size: 6rem;
  line-height: 1;
}
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.text-black {
  --un-text-opacity: 1;
  color: rgb(0 0 0 / var(--un-text-opacity));
}
.font-light {
  font-weight: 300;
}
.font-medium {
  font-weight: 500;
}
.leading-tight {
  line-height: 1.25;
}
.font-sans {
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-black {
    --un-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--un-bg-opacity));
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (min-width: 640px) {
  .sm\\:px-0 {
    padding-left: 0;
    padding-right: 0;
  }
  .sm\\:text-4xl {
    font-size: 2.25rem;
    line-height: 2.5rem;
  }
}
"
`;

exports[`template > produces correct output for error-500 template 2`] = `
"*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
h1 {
  font-size: inherit;
  font-weight: inherit;
}
h1,
p {
  margin: 0;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
"
`;

exports[`template > produces correct output for error-dev template 1`] = `
".spotlight {
  background: linear-gradient(45deg, #00dc82, #36e4da 50%, #0047e1);
  bottom: -40vh;
  filter: blur(30vh);
  height: 60vh;
  opacity: 0.8;
}
.fixed {
  position: fixed;
}
.left-0 {
  left: 0;
}
.right-0 {
  right: 0;
}
.z-10 {
  z-index: 10;
}
.mb-6 {
  margin-bottom: 1.5rem;
}
.mb-8 {
  margin-bottom: 2rem;
}
.h-auto {
  height: auto;
}
.min-h-screen {
  min-height: 100vh;
}
.flex {
  display: flex;
}
.flex-1 {
  flex: 1 1 0%;
}
.flex-col {
  flex-direction: column;
}
.overflow-y-auto {
  overflow-y: auto;
}
.rounded-t-md {
  border-top-left-radius: 0.375rem;
  border-top-right-radius: 0.375rem;
}
.bg-black\\/5 {
  background-color: #0000000d;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.p-8 {
  padding: 2rem;
}
.px-10 {
  padding-left: 2.5rem;
  padding-right: 2.5rem;
}
.pt-14 {
  padding-top: 3.5rem;
}
.text-6xl {
  font-size: 3.75rem;
  line-height: 1;
}
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.text-black {
  --un-text-opacity: 1;
  color: rgb(0 0 0 / var(--un-text-opacity));
}
.font-light {
  font-weight: 300;
}
.font-medium {
  font-weight: 500;
}
.leading-tight {
  line-height: 1.25;
}
.font-sans {
  font-family:
    ui-sans-serif,
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    Noto Sans,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-black {
    --un-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--un-bg-opacity));
  }
  .dark\\:bg-white\\/10 {
    background-color: #ffffff1a;
  }
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (min-width: 640px) {
  .sm\\:text-2xl {
    font-size: 1.5rem;
    line-height: 2rem;
  }
  .sm\\:text-8xl {
    font-size: 6rem;
    line-height: 1;
  }
}
"
`;

exports[`template > produces correct output for error-dev template 2`] = `
"*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
h1 {
  font-size: inherit;
  font-weight: inherit;
}
pre {
  font-family:
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    Liberation Mono,
    Courier New,
    monospace;
  font-feature-settings: normal;
  font-size: 1em;
  font-variation-settings: normal;
}
h1,
p,
pre {
  margin: 0;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
"
`;

exports[`template > produces correct output for loading template 1`] = `
".nuxt-loader-bar {
  animation: gradient 2s infinite;
  animation-fill-mode: forwards;
  animation-timing-function: linear;
  background: repeating-linear-gradient(
    90deg,
    #36e4da 0,
    #1de0b1 25%,
    #00dc82 50%,
    #1de0b1 75%,
    #36e4da
  );
  background-position: 0 0;
  background-size: 200% auto;
  bottom: 0;
  height: 100px;
  height: 5px;
  left: 0;
  position: fixed;
  right: 0;
}
.visual-effects .nuxt-loader-bar {
  bottom: -50px;
  filter: blur(100px);
  height: 100px;
  left: -50px;
  right: -50px;
}
.visual-effects .mouse-gradient {
  background: repeating-linear-gradient(90deg, #00dc82 0, #1de0b1 50%, #36e4da);
  filter: blur(100px);
  opacity: 0.5;
}
#animation-toggle {
  opacity: 0;
  padding: 10px;
  position: fixed;
  right: 0;
  top: 0;
  transition: opacity 0.4s ease-in;
}
#animation-toggle:hover {
  opacity: 0.8;
}
@keyframes gradient {
  0% {
    background-position: 0 0;
  }
  to {
    background-position: -200% 0;
  }
}
@media (prefers-color-scheme: dark) {
  body,
  html {
    color: #fff;
    color-scheme: dark;
  }
  .nuxt-loader-bar {
    opacity: 0.5;
  }
}
*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
a {
  text-decoration: inherit;
}
a,
button {
  color: inherit;
}
button {
  font-family: inherit;
  font-feature-settings: inherit;
  font-size: 100%;
  font-variation-settings: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin: 0;
  padding: 0;
  text-transform: none;
}
[type="button"],
button {
  -webkit-appearance: button;
  background-color: transparent;
  background-image: none;
}
button {
  cursor: pointer;
}
svg {
  display: block;
  vertical-align: middle;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
.absolute {
  position: absolute;
}
.relative {
  position: relative;
}
.top-0 {
  top: 0;
}
.z-20 {
  z-index: 20;
}
.h-\\[200px\\] {
  height: 200px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-\\[200px\\] {
  width: 200px;
}
.flex {
  display: flex;
}
.flex-col {
  flex-direction: column;
}
.items-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}
.overflow-hidden {
  overflow: hidden;
}
.rounded-full {
  border-radius: 9999px;
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.text-center {
  text-align: center;
}
.transition-opacity {
  transition-duration: 0.15s;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
@media (prefers-color-scheme: dark) {
  .dark\\:bg-black {
    --un-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--un-bg-opacity));
  }
}
"
`;

exports[`template > produces correct output for loading template 2`] = `
"#animation-toggle {
  opacity: 0;
  padding: 10px;
  position: fixed;
  right: 0;
  top: 0;
  transition: opacity 0.4s ease-in;
}
#animation-toggle:hover {
  opacity: 0.8;
}
@keyframes gradient {
  0% {
    background-position: 0 0;
  }
  to {
    background-position: -200% 0;
  }
}
@media (prefers-color-scheme: dark) {
  body,
  html {
    color: #fff;
    color-scheme: dark;
  }
}
*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
a {
  text-decoration: inherit;
}
a,
button {
  color: inherit;
}
button {
  font-family: inherit;
  font-feature-settings: inherit;
  font-size: 100%;
  font-variation-settings: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin: 0;
  padding: 0;
  text-transform: none;
}
[type="button"],
button {
  -webkit-appearance: button;
  background-color: transparent;
  background-image: none;
}
button {
  cursor: pointer;
}
svg {
  display: block;
  vertical-align: middle;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
"
`;

exports[`template > produces correct output for welcome template 1`] = `
"@media (prefers-color-scheme: light) {
  .get-started-gradient-border {
    background: linear-gradient(90deg, #fff, #fff),
      linear-gradient(90deg, #00dc82, #1de0b1, #36e4da);
  }
  .gradient-border-modules {
    background: linear-gradient(
      var(--gradient-angle),
      #f7d14c,
      rgba(247, 209, 76, 0.6),
      hsla(0, 0%, 100%, 0.8),
      #f7d14c
    );
  }
  .gradient-border-examples {
    background: linear-gradient(
      var(--gradient-angle),
      #8deaff,
      rgba(141, 234, 255, 0.6),
      hsla(0, 0%, 100%, 0.8),
      #8deaff
    );
  }
  .gradient-border-documentation {
    background: linear-gradient(
      var(--gradient-angle),
      #00dc82,
      rgba(0, 220, 130, 0.6),
      hsla(0, 0%, 100%, 0.8),
      #00dc82
    );
  }
}
@media (prefers-color-scheme: dark) {
  .get-started-gradient-border {
    background: linear-gradient(90deg, #18181b, #18181b),
      linear-gradient(90deg, #00dc82, #1de0b1, #36e4da);
  }
  .gradient-border-modules {
    background: linear-gradient(
      var(--gradient-angle),
      #f7d14c,
      #a38108,
      hsla(0, 0%, 100%, 0.3),
      #a38108
    );
  }
  .gradient-border-examples {
    background: linear-gradient(
      var(--gradient-angle),
      #8deaff,
      #008aa9,
      hsla(0, 0%, 100%, 0.3),
      #008aa9
    );
  }
  .gradient-border-documentation {
    background: linear-gradient(
      var(--gradient-angle),
      #00dc82,
      #003f25,
      hsla(0, 0%, 100%, 0.2),
      #003f25
    );
  }
}
.get-started-gradient-border {
  background-clip: padding-box, border-box;
  background-origin: padding-box, border-box;
  border-color: transparent;
  border-radius: 12px;
  border-width: 1px;
}
.get-started-gradient-border:hover
  > :is(.get-started-gradient-left, .get-started-gradient-right) {
  opacity: 0.2;
}
.get-started-gradient-left,
.get-started-gradient-right {
  opacity: 0;
}
.gradient-border {
  border-radius: 12px;
  left: 0;
  opacity: 0;
  position: absolute;
  top: 0;
  transform: translate(-1px, -1px);
  width: calc(100% + 2px);
  z-index: -1;
}
.gradient-border-rect {
  height: calc(100% + 2px);
}
@media (min-width: 1024px) {
  .gradient-border-rect {
    height: calc(100% + 1px);
  }
}
.gradient-border-square {
  height: calc(100% + 2px);
}
.modules-gradient-right {
  opacity: 0;
}
.documentation-container:hover > .gradient-border,
.examples-container:hover > .gradient-border,
.modules-container:hover > .gradient-border {
  animation: gradient-rotate 5s linear 0s infinite reverse;
  opacity: 1;
  transition: all 0.3s linear;
}
.examples-container:hover > .examples-gradient-right,
.modules-container:hover > .modules-gradient-right {
  opacity: 0.2;
}
.examples-gradient-right {
  opacity: 0;
}
.documentation-image-color-dark,
.documentation-image-color-light,
.examples-image-color-dark,
.examples-image-color-light,
.modules-image-color-dark,
.modules-image-color-light {
  display: none;
}
@media (prefers-color-scheme: light) {
  .modules-image-light {
    display: block;
  }
  .modules-container:hover > a > .modules-image-light,
  .modules-image-dark {
    display: none;
  }
  .examples-image-light,
  .modules-container:hover > a > .modules-image-color-light {
    display: block;
  }
  .examples-container:hover > a > .examples-image-light,
  .examples-image-dark {
    display: none;
  }
  .documentation-image-light,
  .examples-container:hover > a > .examples-image-color-light {
    display: block;
  }
  .documentation-container:hover > a > div > .documentation-image-light,
  .documentation-image-dark {
    display: none;
  }
  .documentation-container:hover > a > div > .documentation-image-color-light {
    display: block;
  }
}
@media (prefers-color-scheme: dark) {
  .modules-image-dark {
    display: block;
  }
  .modules-image-light {
    display: none;
  }
  .modules-container:hover > a > .modules-image-color-dark {
    display: block;
  }
  .modules-container:hover > a > .modules-image-dark {
    display: none;
  }
  .examples-image-dark {
    display: block;
  }
  .examples-image-light {
    display: none;
  }
  .examples-container:hover > a > .examples-image-color-dark {
    display: block;
  }
  .examples-container:hover > a > .examples-image-dark {
    display: none;
  }
  .documentation-image-dark {
    display: block;
  }
  .documentation-image-light {
    display: none;
  }
  .documentation-container:hover > a > div > .documentation-image-color-dark {
    display: block;
  }
  .documentation-container:hover > a > div > .documentation-image-dark {
    display: none;
  }
}
.sr-only {
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  width: 1px;
  clip: rect(0, 0, 0, 0);
  border-width: 0;
  white-space: nowrap;
}
.absolute,
.sr-only {
  position: absolute;
}
.relative {
  position: relative;
}
.inset-x-0 {
  left: 0;
  right: 0;
}
.inset-y-0 {
  bottom: 0;
  top: 0;
}
.-top-\\[58px\\] {
  top: -58px;
}
.-top-3 {
  top: -0.75rem;
}
.left-0 {
  left: 0;
}
.right-0 {
  right: 0;
}
.z-1 {
  z-index: 1;
}
.z-10 {
  z-index: 10;
}
.order-last {
  order: 9999;
}
.grid {
  display: grid;
}
.col-span-2 {
  grid-column: span 2 / span 2;
}
.row-span-2 {
  grid-row: span 2 / span 2;
}
.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}
.mx-auto {
  margin-left: auto;
  margin-right: auto;
}
.mb-2 {
  margin-bottom: 0.5rem;
}
.hidden {
  display: none;
}
.h-\\[70px\\] {
  height: 70px;
}
.h-32 {
  height: 8rem;
}
.max-w-\\[960px\\] {
  max-width: 960px;
}
.min-h-screen {
  min-height: 100vh;
}
.w-\\[20\\%\\] {
  width: 20%;
}
.w-full {
  width: 100%;
}
.flex {
  display: flex;
}
.flex-1 {
  flex: 1 1 0%;
}
.flex-col {
  flex-direction: column;
}
.flex-col-reverse {
  flex-direction: column-reverse;
}
.place-content-center {
  place-content: center;
}
.items-center {
  align-items: center;
}
.justify-end {
  justify-content: flex-end;
}
.justify-center {
  justify-content: center;
}
.gap-3 {
  gap: 0.75rem;
}
.gap-6 {
  gap: 1.5rem;
}
.gap-x-4 {
  column-gap: 1rem;
}
.gap-y-16 {
  row-gap: 4rem;
}
.gap-y-2 {
  row-gap: 0.5rem;
}
.gap-y-4 {
  row-gap: 1rem;
}
.border {
  border-width: 1px;
}
.border-t {
  border-top-width: 1px;
}
.border-gray-200 {
  --un-border-opacity: 1;
  border-color: rgb(224 224 224 / var(--un-border-opacity));
}
.hover\\:border-transparent:hover {
  border-color: transparent;
}
.rounded {
  border-radius: 0.25rem;
}
.rounded-xl {
  border-radius: 0.75rem;
}
.bg-gray-100 {
  --un-bg-opacity: 1;
  background-color: rgb(238 238 238 / var(--un-bg-opacity));
}
.bg-white {
  --un-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--un-bg-opacity));
}
.from-blue-400 {
  --un-gradient-from-position: 0%;
  --un-gradient-from: rgb(96 165 250 / var(--un-from-opacity, 1))
    var(--un-gradient-from-position);
  --un-gradient-to-position: 100%;
  --un-gradient-to: rgba(96, 165, 250, 0) var(--un-gradient-to-position);
  --un-gradient-stops: var(--un-gradient-from), var(--un-gradient-to);
}
.from-green-400 {
  --un-gradient-from-position: 0%;
  --un-gradient-from: rgb(55 233 144 / var(--un-from-opacity, 1))
    var(--un-gradient-from-position);
  --un-gradient-to-position: 100%;
  --un-gradient-to: rgba(55, 233, 144, 0) var(--un-gradient-to-position);
  --un-gradient-stops: var(--un-gradient-from), var(--un-gradient-to);
}
.from-yellow-400 {
  --un-gradient-from-position: 0%;
  --un-gradient-from: rgb(250 204 21 / var(--un-from-opacity, 1))
    var(--un-gradient-from-position);
  --un-gradient-to-position: 100%;
  --un-gradient-to: rgba(250, 204, 21, 0) var(--un-gradient-to-position);
  --un-gradient-stops: var(--un-gradient-from), var(--un-gradient-to);
}
.to-transparent {
  --un-gradient-to-position: 100%;
  --un-gradient-to: transparent var(--un-gradient-to-position);
}
.bg-gradient-to-l {
  --un-gradient-shape: to left in oklch;
  --un-gradient: var(--un-gradient-shape), var(--un-gradient-stops);
}
.bg-gradient-to-l,
.bg-gradient-to-r {
  background-image: linear-gradient(var(--un-gradient));
}
.bg-gradient-to-r {
  --un-gradient-shape: to right in oklch;
  --un-gradient: var(--un-gradient-shape), var(--un-gradient-stops);
}
.p-1 {
  padding: 0.25rem;
}
.px-4 {
  padding-left: 1rem;
  padding-right: 1rem;
}
.px-5 {
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}
.py-14 {
  padding-bottom: 3.5rem;
  padding-top: 3.5rem;
}
.py-6 {
  padding-top: 1.5rem;
}
.pb-6,
.py-6 {
  padding-bottom: 1.5rem;
}
.pt-\\[58px\\] {
  padding-top: 58px;
}
.text-center {
  text-align: center;
}
.text-2xl {
  font-size: 1.5rem;
  line-height: 2rem;
}
.text-4xl {
  font-size: 2.25rem;
  line-height: 2.5rem;
}
.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}
.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}
.text-black {
  --un-text-opacity: 1;
  color: rgb(0 0 0 / var(--un-text-opacity));
}
.text-gray-700 {
  --un-text-opacity: 1;
  color: rgb(66 66 66 / var(--un-text-opacity));
}
.hover\\:text-black:hover {
  --un-text-opacity: 1;
  color: rgb(0 0 0 / var(--un-text-opacity));
}
.font-bold {
  font-weight: 700;
}
.font-semibold {
  font-weight: 600;
}
.font-mono {
  font-family:
    ui-monospace,
    SFMono-Regular,
    Menlo,
    Monaco,
    Consolas,
    Liberation Mono,
    Courier New,
    monospace;
}
.antialiased {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.focus-visible\\:ring-2:focus-visible {
  --un-ring-width: 2px;
  --un-ring-offset-shadow: var(--un-ring-inset) 0 0 0
    var(--un-ring-offset-width) var(--un-ring-offset-color);
  --un-ring-shadow: var(--un-ring-inset) 0 0 0
    calc(var(--un-ring-width) + var(--un-ring-offset-width))
    var(--un-ring-color);
  box-shadow: var(--un-ring-offset-shadow), var(--un-ring-shadow),
    var(--un-shadow);
}
.transition-opacity {
  transition-duration: 0.15s;
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
}
.duration-300 {
  transition-duration: 0.3s;
}
@media (prefers-color-scheme: dark) {
  .dark\\:block {
    display: block;
  }
  .dark\\:hidden {
    display: none;
  }
  .dark\\:border-gray-900 {
    --un-border-opacity: 1;
    border-color: rgb(24 24 27 / var(--un-border-opacity));
  }
  .dark\\:border-transparent {
    border-color: transparent;
  }
  .dark\\:border-none {
    border-style: none;
  }
  .dark\\:bg-black {
    --un-bg-opacity: 1;
    background-color: rgb(0 0 0 / var(--un-bg-opacity));
  }
  .dark\\:bg-gray-900 {
    --un-bg-opacity: 1;
    background-color: rgb(24 24 27 / var(--un-bg-opacity));
  }
  .dark\\:bg-white\\/10 {
    background-color: #ffffff1a;
  }
  .dark\\:text-gray-300 {
    --un-text-opacity: 1;
    color: rgb(189 189 189 / var(--un-text-opacity));
  }
  .dark\\:hover\\:text-white:hover,
  .dark\\:text-white {
    --un-text-opacity: 1;
    color: rgb(255 255 255 / var(--un-text-opacity));
  }
}
@media (min-width: 640px) {
  .sm\\:col-span-1 {
    grid-column: span 1 / span 1;
  }
  .sm\\:h-34 {
    height: 8.5rem;
  }
  .sm\\:min-h-\\[220px\\] {
    min-height: 220px;
  }
  .sm\\:flex-row {
    flex-direction: row;
  }
  .sm\\:justify-between {
    justify-content: space-between;
  }
  .sm\\:px-28 {
    padding-left: 7rem;
    padding-right: 7rem;
  }
  .sm\\:px-6 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
  .sm\\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }
  .sm\\:text-base {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}
@media (min-width: 768px) {
  .md\\:min-h-\\[180px\\] {
    min-height: 180px;
  }
}
@media (min-width: 1024px) {
  .lg\\:order-none {
    order: 0;
  }
  .lg\\:col-span-10 {
    grid-column: span 10 / span 10;
  }
  .lg\\:col-span-4 {
    grid-column: span 4 / span 4;
  }
  .lg\\:col-span-6 {
    grid-column: span 6 / span 6;
  }
  .lg\\:grid-cols-10 {
    grid-template-columns: repeat(10, minmax(0, 1fr));
  }
  .lg\\:min-h-min {
    min-height: min-content;
  }
  .lg\\:flex-col {
    flex-direction: column;
  }
  .lg\\:px-8 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
  .lg\\:py-7 {
    padding-bottom: 1.75rem;
    padding-top: 1.75rem;
  }
}
"
`;

exports[`template > produces correct output for welcome template 2`] = `
"@property --gradient-angle {
  syntax: "<angle>";
  inherits: false;
  initial-value: 180deg;
}
@keyframes gradient-rotate {
  0% {
    --gradient-angle: 0deg;
  }
  to {
    --gradient-angle: 360deg;
  }
}
*,
:after,
:before {
  border-color: var(--un-default-border-color, #e5e7eb);
  border-style: solid;
  border-width: 0;
  box-sizing: border-box;
}
:after,
:before {
  --un-content: "";
}
html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  font-family:
    ui-sans-serif,
    system-ui,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji,
    Segoe UI Symbol,
    Noto Color Emoji;
  font-feature-settings: normal;
  font-variation-settings: normal;
  -moz-tab-size: 4;
  tab-size: 4;
  -webkit-tap-highlight-color: transparent;
}
body {
  line-height: inherit;
  margin: 0;
}
h1,
h2,
h3 {
  font-size: inherit;
  font-weight: inherit;
}
a {
  color: inherit;
  text-decoration: inherit;
}
h1,
h2,
h3,
p,
ul {
  margin: 0;
}
ul {
  list-style: none;
  padding: 0;
}
img,
svg {
  display: block;
  vertical-align: middle;
}
img {
  height: auto;
  max-width: 100%;
}
*,
:after,
:before {
  --un-rotate: 0;
  --un-rotate-x: 0;
  --un-rotate-y: 0;
  --un-rotate-z: 0;
  --un-scale-x: 1;
  --un-scale-y: 1;
  --un-scale-z: 1;
  --un-skew-x: 0;
  --un-skew-y: 0;
  --un-translate-x: 0;
  --un-translate-y: 0;
  --un-translate-z: 0;
  --un-pan-x: ;
  --un-pan-y: ;
  --un-pinch-zoom: ;
  --un-scroll-snap-strictness: proximity;
  --un-ordinal: ;
  --un-slashed-zero: ;
  --un-numeric-figure: ;
  --un-numeric-spacing: ;
  --un-numeric-fraction: ;
  --un-border-spacing-x: 0;
  --un-border-spacing-y: 0;
  --un-ring-offset-shadow: 0 0 transparent;
  --un-ring-shadow: 0 0 transparent;
  --un-shadow-inset: ;
  --un-shadow: 0 0 transparent;
  --un-ring-inset: ;
  --un-ring-offset-width: 0px;
  --un-ring-offset-color: #fff;
  --un-ring-width: 0px;
  --un-ring-color: rgba(147, 197, 253, 0.5);
  --un-blur: ;
  --un-brightness: ;
  --un-contrast: ;
  --un-drop-shadow: ;
  --un-grayscale: ;
  --un-hue-rotate: ;
  --un-invert: ;
  --un-saturate: ;
  --un-sepia: ;
  --un-backdrop-blur: ;
  --un-backdrop-brightness: ;
  --un-backdrop-contrast: ;
  --un-backdrop-grayscale: ;
  --un-backdrop-hue-rotate: ;
  --un-backdrop-invert: ;
  --un-backdrop-opacity: ;
  --un-backdrop-saturate: ;
  --un-backdrop-sepia: ;
}
"
`;
